2005-04-16  Nathaniel Smith  <njs@codesourcery.com>

	* ChangeLog: Fixup after merge.

2005-04-16  Emile Snyder <emile@alumni.reed.edu>

	* tests/t_add_vs_commit.at: New test for failing case.  If you
	add a file in you working dir, someone else adds the same file
	and commits, then you do an update it messes up your working
	directory.
	* testsuite.at: Add it.
	
2005-04-16  Nathaniel Smith  <njs@codesourcery.com>

	* commands.cc (checkout): Move check for existence of revision
	earlier.
	
	* tests/t_netsync_defaults.at, tests/t_netsync_single.at:
	Don't hard-code netsync port.

2005-04-16  Nathaniel Smith  <njs@codesourcery.com>

	* testsuite.at: Use a random server port.
	
	* .mt-attrs, contrib/README: Update for Notify.pl ->
	monotone-notify.pl rename.
	
	* monotone.1: Warn people off rcs_import.
	* monotone.texi (Commands): Likewise.

2005-04-16  Nathaniel Smith  <njs@codesourcery.com>

	* AUTHORS: Add Emile Snyder <emile@alumni.reed.edu>.

2005-04-16  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_lf_crlf.at: New test from Emile Snyder
	<emile@alumni.reed.edu>, with tweaks.
	* testsuite.at: Add it.

2005-04-16  Nathaniel Smith  <njs@codesourcery.com>

	* ChangeLog: Small fixups.

2005-04-16  Sebastian Spaeth <Sebastian@sspaeth.de>
	
	* tests/t_cvsimport2.at: new test; CVS Attic files fail test
	reported by: hjlipp@web.de 15.04.2005 02:45

2005-04-16  Sebastian Spaeth <Sebastian@sspaeth.de>
	
	* tests/t_rcs_import.at: new test; problematic CVS import as
	reported in the list. However it works just fine here, so it
	really tests for a successful pass

2005-04-16  Sebastian Spaeth <Sebastian@sspaeth.de>

	* tests/README: new file, on how to create/run tests

2005-04-16  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_rename_dir_add_dir_with_old_name.at: XFAIL.

2005-04-16  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_diff_binary.at: Un-XFAIL.

2005-04-16  Nathaniel Smith  <njs@codesourcery.com>
