@@ -560,3 +560,4 @@ m4_include(tests/t_rcs_import.at)
 m4_include(tests/t_cvsimport2.at)
 m4_include(tests/t_lf_crlf.at)
 m4_include(tests/t_add_vs_commit.at)
+m4_include(tests/t_update_nonexistent.at)
